[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccolcon"
version = "0.1.0"
description = "Interactive terminal tool for compiling ROS2 workspaces"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "ccolcon developers"}
]
dependencies = [
    "textual>=8.0.0",
]

[project.scripts]
ccolcon = "ccolcon.cli:main"

[tool.setuptools]
packages = ["ccolcon"]
